@@ -1,3 +1,7 @@
+2002-12-24  Jim Wilson  <wilson@redhat.com>
+
+	* alias.c (record_set): Handle multi-reg hard registers.
+
 2002-12-24  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* regmove.c: Fix comment typos.
